# floe

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  architecture_delta_review_pre_rfc.md  architecture_delta_review_rfc.md  docker-compose.yml  justfile  schema.json  spike-plan.md
.claude/: launch.json
.github/workflows/: ci.yml
agent-knowledge/: CLAUDE.md  rust-code-analysis.md
agent-knowledge/resources/: rust-code-analysis-sources.json
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/e2e/: README.md  landing-sample.spec.ts
apps/web/scripts/: gen-types.mjs
apps/web/src/: App.tsx  api.ts  index.css  main.tsx
crates/adr-cfg/: Cargo.toml
crates/adr-cfg/src/: lib.rs
crates/adr-cfg/tests/: cfg.rs
crates/adr-cli/: Cargo.toml
crates/adr-cli/src/: calibrate.rs  intent_source.rs  main.rs
crates/adr-core/: Cargo.toml
crates/adr-core/src/: artifact.rs  evidence.rs  flow.rs  graph.rs  hunks.rs  intent.rs  lib.rs  provenance.rs
crates/adr-core/tests/: schema.rs
crates/adr-cost/: Cargo.toml
crates/adr-cost/src/: lib.rs
crates/adr-evidence/: Cargo.toml
crates/adr-evidence/src/: lib.rs
crates/adr-flows/: Cargo.toml
crates/adr-flows/src/: lib.rs
crates/adr-hunks/: Cargo.toml
crates/adr-hunks/src/: api.rs  call.rs  lib.rs  state.rs
crates/adr-hunks/tests/: call.rs  e2e.rs
crates/adr-hunks/tests/snapshots/: call__all_hunks_pr0002_state.snap  call__all_hunks_pr0003_api.snap  call__call_hunk_pr0001.snap  e2e__pr0001_add_retry.snap  e2e__pr0004_combined.snap  e2e__pr0006_cross_file.snap
crates/adr-mcp/: Cargo.toml
crates/adr-mcp/src/: errors.rs  fs_tools.rs  handlers.rs  invariants.rs  lib.rs  state.rs  wire.rs
crates/adr-mcp/tests/: session_scripts.rs
crates/adr-parse/: Cargo.toml
crates/adr-parse/src/: lib.rs
crates/adr-parse/tests/: ingest.rs
crates/adr-parse/tests/snapshots/: ingest__ingest_pr0001_base.snap  ingest__ingest_pr0001_head.snap
crates/adr-probe/: Cargo.toml
crates/adr-probe/src/: aggregate.rs  lib.rs  session.rs  storage.rs
crates/adr-server/: Cargo.toml
crates/adr-server/src/: auth.rs  cache.rs  db.rs  git_sync.rs  job.rs  lib.rs  main.rs  router.rs  samples.rs  worker.rs
crates/adr-server/src/llm/: config.rs  glm_client.rs  intent_pipeline.rs  mcp_client.rs  mod.rs  model_defaults.rs  ollama_client.rs  probe_client.rs  probe_pipeline.rs  prompt.rs  synth_parallel.rs  synthesize.rs  tool_call_drift.rs
crates/floe-cfg/: Cargo.toml
crates/floe-cfg/src/: lib.rs
crates/floe-cfg/tests/: cfg.rs
crates/floe-cli/: Cargo.toml
crates/floe-cli/src/: calibrate.rs  intent_source.rs  main.rs
crates/floe-core/: Cargo.toml
crates/floe-core/src/: artifact.rs  cfg.rs  evidence.rs  flow.rs  flow_membership.rs  graph.rs  hunks.rs  inline_notes.rs  intent.rs  lib.rs  provenance.rs
crates/floe-core/tests/: schema.rs
crates/floe-cost/: Cargo.toml
crates/floe-cost/src/: lib.rs
crates/floe-evidence/: Cargo.toml
crates/floe-evidence/src/: lib.rs
crates/floe-flows/: Cargo.toml
crates/floe-flows/src/: lib.rs
crates/floe-hunks/: Cargo.toml
crates/floe-hunks/src/: api.rs  call.rs  data.rs  deletion.rs  docs.rs  lib.rs  lock.rs  state.rs
crates/floe-hunks/tests/: call.rs  e2e.rs
crates/floe-hunks/tests/snapshots/: call__all_hunks_pr0002_state.snap  call__all_hunks_pr0003_api.snap  call__call_hunk_pr0001.snap  e2e__pr0001_add_retry.snap  e2e__pr0004_combined.snap  e2e__pr0005_noop.snap  e2e__pr0006_cross_file.snap
crates/floe-lsp/: Cargo.toml
crates/floe-lsp/src/: enrich.rs  lib.rs
crates/floe-lsp/tests/: smoke.rs
crates/floe-mcp/: Cargo.toml
crates/floe-mcp/src/: errors.rs  fs_tools.rs  handlers.rs  lib.rs  state.rs  wire.rs
crates/floe-mcp/tests/: session_scripts.rs
crates/floe-parse/: Cargo.toml
crates/floe-parse-rust/: Cargo.toml
crates/floe-parse-rust/src/: lib.rs
crates/floe-parse/src/: lib.rs  workspace.rs
crates/floe-parse/tests/: ingest.rs
crates/floe-parse/tests/snapshots/: ingest__ingest_pr0001_head.snap
crates/floe-probe/: Cargo.toml
crates/floe-probe/src/: aggregate.rs  lib.rs  probes.rs  session.rs  storage.rs
crates/floe-server/: Cargo.toml
crates/floe-server/src/: auth.rs  cache.rs  db.rs  git_sync.rs  job.rs  lib.rs  main.rs  router.rs  samples.rs  worker.rs
crates/floe-server/src/llm/: config.rs  flow_membership.rs  glm_client.rs  intent_pipeline.rs  mcp_client.rs  mod.rs  model_defaults.rs  probe_client.rs  probe_pipeline.rs  prompt.rs  summary_pass.rs  synth_parallel.rs  synthesize.rs  tool_call_drift.rs
crates/floe-server/src/passes/: claim_anchors.rs  compile.rs  coverage.rs  external_runs.rs  intent_extract.rs  mod.rs
docs/: adr-pi-extension.md  architecture.md  floe-pi-extension.md  hunk-types.md  rfc-v0.3.md  scope-5-cost-model.md
fixtures/: intent-glide-mq-181.json  smoke-glide-mq-181.json
fixtures/pr-0001-add-retry/: intent.json  meta.json
fixtures/pr-0002-state-widen/: intent.json  meta.json
fixtures/pr-0003-api-widen/: intent.json  meta.json
fixtures/pr-0004-combined/: intent.json  meta.json
fixtures/pr-0005-noop/: intent.json  meta.json
fixtures/pr-0006-cross-file/: intent.json  meta.json
fixtures/pr-0007-lock-primitive/: intent.json  meta.json
fixtures/pr-0008-data-shape/: intent.json  meta.json
fixtures/pr-0009-docs-drift/: intent.json  meta.json
fixtures/pr-0010-deletion/: intent.json  meta.json
fixtures/smoke-outputs/: gemma4-26b-glide-mq-181.txt  gemma4-e4b-glide-mq-181.txt
prompts/: flow_synthesis.md
prompts/flow_synthesis/v0.2.0/: flow_synthesis.about.md  flow_synthesis.md
prompts/flow_synthesis/v0.3.0/: flow_synthesis.about.md  flow_synthesis.md
prompts/flow_synthesis/v0.3.1/: flow_synthesis.about.md  flow_synthesis.md
prompts/intent_fit/v0.1.0/: intent_fit.about.md  intent_fit.md
prompts/proof_verification/v0.1.0/: proof_verification.about.md  proof_verification.md
(+73 files in other folders)
