[workspace]
resolver = "2"
members = [
    "crates/floe-core",
    "crates/floe-parse",
    "crates/floe-parse-rust",
    "crates/floe-hunks",
    "crates/floe-cfg",
    "crates/floe-flows",
    "crates/floe-server",
    "crates/floe-cli",
    "crates/floe-mcp",
    "crates/floe-evidence",
    "crates/floe-cost",
    "crates/floe-probe",
    "crates/floe-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "1"
anyhow = "1"
blake3 = "1"
petgraph = { version = "0.6", features = ["serde-1"] }
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
walkdir = "2"
ignore = "0.4"
globset = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
dotenvy = "0.15"
libsql = { version = "0.9", default-features = false, features = ["core", "serde"] }
oauth2 = "4"
axum-extra = { version = "0.9", features = ["cookie", "cookie-signed"] }
time = { version = "0.3", features = ["serde"] }
insta = { version = "1", features = ["json", "redactions"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-lsp = { version = "0.2", features = ["tokio", "stdio", "tracing"] }
# lsp-types is re-exported from async-lsp — don't take a direct
# version here, it'd conflict with async-lsp's internal pin and
# break Uri↔Url type unification.
tower = { version = "0.5", features = ["util"] }

floe-core = { path = "crates/floe-core" }
floe-parse = { path = "crates/floe-parse" }
floe-parse-rust = { path = "crates/floe-parse-rust" }
floe-hunks = { path = "crates/floe-hunks" }
floe-cfg = { path = "crates/floe-cfg" }
floe-flows = { path = "crates/floe-flows" }
floe-server = { path = "crates/floe-server" }
floe-mcp = { path = "crates/floe-mcp" }
floe-evidence = { path = "crates/floe-evidence" }
floe-cost = { path = "crates/floe-cost" }
floe-probe = { path = "crates/floe-probe" }
floe-lsp = { path = "crates/floe-lsp" }

[profile.release]
lto = "thin"
codegen-units = 1
