[package]
name = "adr-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "adr command-line interface."

[[bin]]
name = "adr"
path = "src/main.rs"

[dependencies]
adr-core = { workspace = true }
adr-parse = { workspace = true }
adr-hunks = { workspace = true }
adr-cfg = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
