[package]
name = "adr-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Host for the @adr/pi-extension tool contract. Validates LLM flow mutations against artifact invariants and produces the final Flow list."

[[bin]]
name = "adr-mcp"
path = "src/bin/server.rs"

[dependencies]
adr-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
schemars.workspace = true
anyhow.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ignore = { workspace = true }
globset = { workspace = true }
grep-searcher = { workspace = true }
grep-regex = { workspace = true }
grep-matcher = { workspace = true }

[dev-dependencies]
insta.workspace = true
tempfile = "3"
