[package]
name = "adr-parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TypeScript parsing via tree-sitter into adr-core graph nodes."

[dependencies]
adr-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
