[package]
name = "adr-probe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM-navigation probes that measure how expensive the repo is to reason about. Produces per-entity cost baselines that feed the per-flow signed cost delta."

[dependencies]
adr-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
blake3.workspace = true
tokio = { workspace = true }
tracing.workspace = true
