[package]
name = "adr-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum orchestrator: POST /analyze, GET /analyze/:id, SSE progress stream."

[[bin]]
name = "adr-server"
path = "src/main.rs"

[dependencies]
adr-core = { workspace = true }
adr-parse = { workspace = true }
adr-cfg = { workspace = true }
adr-hunks = { workspace = true }
adr-flows = { workspace = true }
adr-mcp = { workspace = true }
adr-evidence = { workspace = true }
adr-cost = { workspace = true }
adr-probe = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
dotenvy = { workspace = true }
libsql = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
oauth2 = { workspace = true }
axum-extra = { workspace = true }
time = { workspace = true }
hex = "0.4"
url = "2"

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
