[package]
name = "floe-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "adr command-line interface."

[[bin]]
name = "adr"
path = "src/main.rs"

[dependencies]
floe-core = { workspace = true }
floe-parse = { workspace = true }
floe-hunks = { workspace = true }
floe-cfg = { workspace = true }
floe-flows = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
