[package]
name = "floe-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core schema and graph types for the architectural delta review artifact."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
schemars = { workspace = true }
