[package]
name = "floe-cost"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Per-flow review-effort estimator — attributes cost drivers to each flow's hunks, entities, and cross-file reach."

[dependencies]
floe-core.workspace = true
floe-probe.workspace = true
