[package]
name = "floe-evidence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deterministic evidence collectors — emits per-flow claims that back or caution about each flow's rationale."

[dependencies]
floe-core.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
