[package]
name = "floe-hunks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Semantic hunk extractors (call, state, api) over base/head graphs."

[dependencies]
floe-core = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
floe-parse = { workspace = true }
insta = { workspace = true }
