[package]
name = "floe-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LSP client — drives typescript-language-server to build a semantic call graph and anchor claims to source ranges. In-process client (TS v2 decision)."

[dependencies]
floe-core = { workspace = true }
async-lsp = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["compat"] }
tower = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
