[package]
name = "floe-probe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM-navigation probes that measure how expensive the repo is to reason about. Produces per-entity cost baselines that feed the per-flow signed cost delta."

[dependencies]
floe-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
blake3.workspace = true
tokio = { workspace = true }
tracing.workspace = true
